# ICHI8

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-web.yml
apps/client/: README.md  pubspec.yaml
apps/client/android/app/: build.gradle.kts
apps/client/android/app/src/main/: AndroidManifest.xml
apps/client/android/app/src/main/kotlin/com/example/ichi8_client/: MainActivity.kt
apps/client/ios/Runner/: Info.plist
apps/client/ios/Runner.xcodeproj/: project.pbxproj
apps/client/lib/: main.dart
apps/client/test/: widget_test.dart
apps/client/web/: index.html  manifest.json
apps/server/: Cargo.toml  Dockerfile
apps/server/migrations/: 0001_initial_schema.sql
apps/server/src/: main.rs  models.rs
docs/: README.md
docs/api/: README.md
docs/deployment/: README.md  ichi8-gg.md  ovh-database.md
docs/game-design/: README.md
docs/lore/: README.md
